--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "uu-uui",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "private": false,
-  "main": "dist/uu-ui.umd.js",
+  "main": "dist/uu-uui.umd.js",
   "author": {
     "name": "Rck"
   },
